edited html files for better responsiveness creating containers to or not display depending on screen width

--- a/src/app/components/Main_Component/trending/trending.component.html
+++ b/src/app/components/Main_Component/trending/trending.component.html
@@ -14,8 +14,8 @@
     Et, distinctio sequi. Nihil ad itaque dolor aspernatur, non quo?
     <div class="row pt-3">
       <div class="col">
-        <button [routerLink]="['products/sportswear']" class="btn btn-primary">
-          Shop climbing gears from LA Sportiva and other big brands
+        <button [routerLink]="['products/sportswear']" class="btn btn-info">
+          Shop LA Sportiva gears and others
         </button>
       </div>
     </div>
