--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -26,7 +26,7 @@
         </p>
         <p class="text-print">
           Get 1% cash back on all purchases and 2% everytime you fill up your
-          gass. Low APR rating. No sign up fee. 24/7 support helpline
+          gass. Low APR rating. No sign up fee. 24/7 support helpline.
         </p>
       </li>
     </ul>
@@ -103,12 +103,12 @@
   </div>
 </div>
 <div id="footer" class="row footer-contact">
-  <div class="col-md-6 p-5">
+  <div class="col-6 p-5 copyright">
     <i class="fas fa-copyright"
       ><span class="push-icon copyright">2020 Cartify Inc.</span></i
     >
   </div>
-  <div class="col-md-6 p-5 d-flex flex-row-reverse">
+  <div class="col-md-6 col-12 p-5 social-links">
     <a href="http://www.facebook.com"
       ><i class="fab fa-facebook-f px-4 social-media"></i
     ></a>
