--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -36,12 +36,12 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4">
+          <div class="col-auto">
             <button type="submit" class="btn mt-3">
               Sign in
             </button>
           </div>
-          <div class="col-md-4 google">
+          <div class="col-auto google">
             <span>
               <i
                 id="googleLogin"
@@ -50,7 +50,7 @@
               ></i>
             </span>
           </div>
-          <div class="col-md-4">
+          <div class="col-auto">
             <span id="facebookLogin">
               <i
                 (click)="signInWithFB()"
