--- a/src/app/components/User_Component/order-details/order-details.component.html
+++ b/src/app/components/User_Component/order-details/order-details.component.html
@@ -6,62 +6,108 @@
   >
     <i class="fas fa-chevron-left"></i> Back to shopping
   </button>
-
-  <div class="row mt-4">
-    <div class="col-md-7 col-sm-6 text-nowrap">
-      <h4>Product</h4>
+  <section id="normal-width">
+    <div class="row mt-4">
+      <div class="col-md-7 col-sm-6 text-nowrap">
+        <h4>Product</h4>
+      </div>
+      <div class="col-sm-2 text-nowrap">
+        <h4>Quantity</h4>
+      </div>
+      <div class="col-sm-2 text-nowrap">
+        <h4>Item price</h4>
+      </div>
+      <div class="col-md-1 text-nowrap">
+        <h4>Total</h4>
+      </div>
     </div>
-    <div class="col-sm-2 text-nowrap">
-      <h4>Quantity</h4>
-    </div>
-    <div class="col-sm-2 text-nowrap">
-      <h4>Item price</h4>
-    </div>
-    <div class="col-md-1 text-nowrap">
-      <h4>Total</h4>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <ul class="list-unstyled" *ngFor="let cart of cart">
-        <li class="media py-4" data-item-id="cart.item._id">
-          <div class="col-md-7 col-sm-6">
-            <div class="row">
-              <div class="media-pic img-fluid">
-                <img
-                  [routerLink]="['/cartify/products/details', cart.item._id]"
-                  src="{{ cart.item.imagePath }}"
-                  onerror="this.onerror=null; this.src='./../../../../assets/img/no_exisint_image.png'; this.class='card-img-top'"
-                />
-              </div>
-              <div class="col-sm-7">
-                <h5>{{ cart.item.brand }}</h5>
-                <p>
-                  <a
+    <div class="row">
+      <div class="col">
+        <ul class="list-unstyled" *ngFor="let cart of cart">
+          <li class="media py-4" data-item-id="cart.item._id">
+            <div class="col-md-7 col-sm-6">
+              <div class="row">
+                <div class="media-pic img-fluid">
+                  <img
                     [routerLink]="['/cartify/products/details', cart.item._id]"
-                  >
-                    <h5>
-                      {{ cart.item.name }}
-                    </h5>
-                  </a>
-                </p>
-                <p>Description: {{ cart.item.description }}</p>
+                    src="{{ cart.item.imagePath }}"
+                    onerror="this.onerror=null; this.src='./../../../../assets/img/no_exisint_image.png'; this.class='card-img-top'"
+                  />
+                </div>
+                <div class="col-sm-7">
+                  <h5>{{ cart.item.brand }}</h5>
+                  <p>
+                    <a
+                      [routerLink]="[
+                        '/cartify/products/details',
+                        cart.item._id
+                      ]"
+                    >
+                      <h5>
+                        {{ cart.item.name }}
+                      </h5>
+                    </a>
+                  </p>
+                  <p>Description: {{ cart.item.description }}</p>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-sm-2 pl-5">
-            <h5>{{ cart.qty }}</h5>
-          </div>
-          <div class="col-sm-2 pl-5">
-            <h5>${{ cart.item.price }}</h5>
-          </div>
-          <div class="col-auto">
-            <h5 class="product-price pl-4">${{ cart.price }}</h5>
-          </div>
-        </li>
-      </ul>
+            <div class="col-sm-2 pl-5">
+              <h5>{{ cart.qty }}</h5>
+            </div>
+            <div class="col-sm-2 pl-5">
+              <h5>${{ cart.item.price }}</h5>
+            </div>
+            <div class="col-auto">
+              <h5 class="product-price pl-4">${{ cart.price }}</h5>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
+  </section>
+  <section id="landscape-phone">
+    <div class="row">
+      <div class="col">
+        <ul class="list-unstyled" *ngFor="let cart of cart">
+          <li class="media py-4" data-item-id="cart.item._id">
+            <div class="col-auto">
+              <div class="row">
+                <div class="media-pic img-fluid">
+                  <img
+                    [routerLink]="['/cartify/products/details', cart.item._id]"
+                    src="{{ cart.item.imagePath }}"
+                    onerror="this.onerror=null; this.src='./../../../../assets/img/no_exisint_image.png'; this.class='card-img-top'"
+                  />
+                </div>
+                <div class="col-auto mt-2">
+                  <h5>{{ cart.item.brand }}</h5>
+                  <p>
+                    <a
+                      [routerLink]="[
+                        '/cartify/products/details',
+                        cart.item._id
+                      ]"
+                    >
+                      <h5>
+                        {{ cart.item.name }}
+                      </h5>
+                    </a>
+                  </p>
+                  <p>Description: {{ cart.item.description }}</p>
+                  <p>Quantity: {{ cart.qty }}</p>
+                  <p>Price: ${{ cart.item.price }}</p>
+                  <p class="product-price">
+                    Total item price: ${{ cart.price }}
+                  </p>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
   <div class="row">
     <div class="col-md">
       <h2>Total: ${{ order?.amount }}</h2>
