--- a/src/app/components/User_Component/purchases/purchases.component.html
+++ b/src/app/components/User_Component/purchases/purchases.component.html
@@ -5,12 +5,12 @@
     </div>
   </div>
   <div class="container">
-    <table class="table table-hover mt-4">
+    <table class="table table-condensed table-hover mt-4">
       <thead class="thead">
         <tr>
-          <th scope="col">Order ID#</th>
-          <th scope="col">Item Qty</th>
-          <th scope="col">Total Price</th>
+          <th scope="col" class="orderId">Order ID#</th>
+          <th scope="col" class="itemQty">Item Qty</th>
+          <th scope="col" class="price">Total Price</th>
         </tr>
       </thead>
       <tbody>
@@ -18,12 +18,14 @@
           <h4>No purchases found</h4>
         </ng-container>
         <tr *ngFor="let order of orders" class="py-4">
-          <td [routerLink]="[order._id]" class="order-id">{{ order._id }}</td>
-          <td>{{ order.cart.totalQty }} item(s)</td>
-          <td>${{ order.amount }}</td>
+          <td [routerLink]="[order._id]" class="order-id">
+            {{ order._id }}
+          </td>
+          <td class="item-qty">{{ order.cart.totalQty }} item(s)</td>
+          <td class="item-price">${{ order.amount }}</td>
         </tr>
       </tbody>
     </table>
   </div>
 </ng-container>
-<router-outlet> </router-outlet>
+<router-outlet></router-outlet>
