--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,111 +1,272 @@
-<div class="row">
-  <div *ngIf="cart" class="container">
-    <div class="row mt-5">
-      <div class="col-auto mr-auto">
-        <h1>Shopping cart</h1>
+<section id="normal-width">
+  <div class="row">
+    <div *ngIf="cart" class="container">
+      <div class="row mt-5">
+        <div class="col-auto mr-auto">
+          <h1>Shopping cart</h1>
+        </div>
+        <div class="col-auto">
+          <h2>$ {{ cart.totalPrice }}.00</h2>
+        </div>
       </div>
-      <div class="col-auto">
-        <h2>$ {{ cart.totalPrice }}.00</h2>
+      <div class="row">
+        <div class="col-auto mr-auto">
+          <h5>{{ cart.totalQty }} item(s)</h5>
+        </div>
+        <div class="col-auto">
+          <h5>Subtotal</h5>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-auto mr-auto">
-        <h5>{{ cart.totalQty }} item(s)</h5>
-      </div>
-      <div class="col-auto">
-        <h5>Subtotal</h5>
-      </div>
-    </div>
-    <div class="row mt-3">
-      <div class="col-auto">
-        <button
-          [routerLink]="['/cartify/products']"
-          class="btn btn-outline-secondary btn-lg"
-        >
-          Keep shopping
-        </button>
-      </div>
-      <div *ngIf="cart.totalQty > 0" class="col-auto ml-auto">
-        <button [routerLink]="['/checkout']" class="btn btn-info btn-lg">
-          Proceed to checkout
-        </button>
+      <div class="row mt-3">
+        <div class="col-auto">
+          <button
+            [routerLink]="['/cartify/products']"
+            class="btn btn-outline-secondary btn-lg"
+          >
+            Keep shopping
+          </button>
+        </div>
+        <div *ngIf="cart.totalQty > 0" class="col-auto ml-auto">
+          <button
+            *ngIf="loggedIn"
+            data-toggle="modal"
+            data-target="#userLogin"
+            class="btn btn-info btn-lg"
+          >
+            Proceed to checkout
+          </button>
+          <button
+            *ngIf="loggedUser"
+            [routerLink]="['/checkout']"
+            class="btn btn-info btn-lg"
+          >
+            Proceed to checkout
+          </button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="row mt-5">
-  <div class="container" *ngIf="cartItems?.length > 0">
-    <div class="row">
-      <div class="col-md-7 col-sm-6">
-        <h4>Product</h4>
+  <div class="row mt-5">
+    <div class="container" *ngIf="cartItems?.length > 0">
+      <div class="row">
+        <div class="col-md-7 col-sm-6">
+          <h4>Product</h4>
+        </div>
+        <div class="col-sm-2">
+          <h4>Quantity</h4>
+        </div>
+        <div class="col-sm-2">
+          <h4>Item price</h4>
+        </div>
+        <div class="col-md-1">
+          <h4>Total</h4>
+        </div>
       </div>
-      <div class="col-sm-2">
-        <h4>Quantity</h4>
-      </div>
-      <div class="col-sm-2">
-        <h4>Item price</h4>
-      </div>
-      <div class="col-md-1">
-        <h4>Total</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <ul class="list-unstyled" *ngFor="let cart of cartItems">
-          <li class="media py-4" data-item-id="cart.item._id">
-            <div class="col-md-7 col-sm-6">
-              <div class="row">
-                <div class="media-pic img-fluid">
-                  <img
-                    [routerLink]="['/cartify/products/details', cart.item._id]"
-                    src="{{ cart.item.imagePath }}"
-                    alt="Image not found"
-                    onerror="this.onerror=null; this.src='./../../../assets/img/no_exisint_image.png'"
-                  />
-                </div>
-                <div class="col-sm-7">
-                  <h5>{{ cart.item.brand }}</h5>
-                  <p>
-                    <a
+      <div class="row">
+        <div class="col">
+          <ul class="list-unstyled" *ngFor="let cart of cartItems">
+            <li class="media py-4" data-item-id="cart.item._id">
+              <div class="col-md-7 col-sm-6">
+                <div class="row">
+                  <div class="media-pic img-fluid">
+                    <img
                       [routerLink]="[
                         '/cartify/products/details',
                         cart.item._id
                       ]"
-                    >
-                      <h5>
-                        {{ cart.item.name }}
-                      </h5>
-                    </a>
-                  </p>
-                  <p>Description: {{ cart.item.description }}</p>
+                      src="{{ cart.item.imagePath }}"
+                      alt="Image not found"
+                      onerror="this.onerror=null; this.src='./../../../assets/img/no_exisint_image.png'"
+                    />
+                  </div>
+                  <div class="col-sm-7">
+                    <h5>{{ cart.item.brand }}</h5>
+                    <p>
+                      <a
+                        [routerLink]="[
+                          '/cartify/products/details',
+                          cart.item._id
+                        ]"
+                      >
+                        <h5>
+                          {{ cart.item.name }}
+                        </h5>
+                      </a>
+                    </p>
+                    <p>Description: {{ cart.item.description }}</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-sm-2 pl-5">
-              <h5>{{ cart.qty }}</h5>
-            </div>
-            <div class="col-sm-2 pl-5">
-              <h5>${{ cart.item.price }}</h5>
-            </div>
-            <div class="col-auto">
-              <h5 class="product-price pl-4">${{ cart.price }}</h5>
-            </div>
-            <div class="media-body pl-3">
-              <button
-                (click)="removeItem(cart.item._id)"
-                type="button"
-                class="close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-          </li>
-        </ul>
+              <div class="col-sm-2 pl-5">
+                <h5>{{ cart.qty }}</h5>
+              </div>
+              <div class="col-sm-2 pl-5">
+                <h5>${{ cart.item.price }}</h5>
+              </div>
+              <div class="col-auto">
+                <h5 class="product-price pl-4">${{ cart.price }}</h5>
+              </div>
+              <div class="media-body">
+                <button
+                  (click)="removeItem(cart.item._id)"
+                  type="button"
+                  class="close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="landscape-phone">
+  <div class="row">
+    <div *ngIf="cart" class="container">
+      <div class="row mt-5">
+        <div class="col-auto mr-auto">
+          <h1 class="text-shopping-total">Shopping cart</h1>
+        </div>
+        <div class="col-auto">
+          <h2 class="text-shopping-total">$ {{ cart.totalPrice }}.00</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-auto mr-auto">
+          <h5>{{ cart.totalQty }} item(s)</h5>
+        </div>
+        <div class="col-auto">
+          <h5>Subtotal</h5>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-auto">
+          <button
+            [routerLink]="['/cartify/products']"
+            class="btn btn-outline-secondary btn-sm"
+          >
+            Keep shopping
+          </button>
+        </div>
+        <div *ngIf="cart.totalQty > 0" class="col-auto ml-auto">
+          <button
+            *ngIf="loggedIn"
+            data-toggle="modal"
+            data-target="#userLogin"
+            class="btn btn-info btn-sm"
+          >
+            Proceed to checkout
+          </button>
+          <button
+            *ngIf="loggedUser"
+            [routerLink]="['/checkout']"
+            class="btn btn-info btn-sm p-1"
+          >
+            Proceed to checkout
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row mt-5">
+    <div class="container" *ngIf="cartItems?.length > 0">
+      <div class="row">
+        <div class="col-12">
+          <ul class="list-unstyled" *ngFor="let cart of cartItems">
+            <li class="media py-4" data-item-id="cart.item._id">
+              <div class="col-auto">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="media-pic img-fluid">
+                      <div class="col">
+                        <button
+                          (click)="removeItem(cart.item._id)"
+                          type="button"
+                          class="close"
+                        >
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <img
+                        [routerLink]="[
+                          '/cartify/products/details',
+                          cart.item._id
+                        ]"
+                        src="{{ cart.item.imagePath }}"
+                        alt="Image not found"
+                        onerror="this.onerror=null; this.src='./../../../assets/img/no_exisint_image.png'"
+                      />
+                    </div>
+                  </div>
+                  <div class="col-sm-7 mt-2">
+                    <h5>{{ cart.item.brand }}</h5>
+                    <p>
+                      <a
+                        [routerLink]="[
+                          '/cartify/products/details',
+                          cart.item._id
+                        ]"
+                      >
+                        <h5>
+                          {{ cart.item.name }}
+                        </h5>
+                      </a>
+                    </p>
+                    <p>Description: {{ cart.item.description }}</p>
+                    <p>Quantity: {{ cart.qty }}</p>
+                    <p>Price: ${{ cart.item.price }}</p>
+                    <p class="product-price">
+                      Total item price: ${{ cart.price }}
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="userLogin"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="modalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body text-center">
+        <h5 id="modalLabel">
+          Please login to your Cartify account
+        </h5>
+      </div>
+      <div class="modal-footer justify-content-center">
+        <button
+          tyoe="button"
+          class="btn btn-outline-secondary closeModal"
+          data-dismiss="modal"
+        >
+          Cancel
+        </button>
+        <button
+          (click)="socialLogout()"
+          data-dismiss="modal"
+          type="button"
+          class="btn btn-info"
+        >
+          Logout
+        </button>
       </div>
     </div>
   </div>
 </div>
-<!-- <router-outlet>
-  <app-custom-form></app-custom-form>
-</router-outlet> -->
