--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -69,10 +69,6 @@
               class="dropdown-item"
               >Accessories</a
             >
-            <div class="dropdown-divider"></div>
-            <a [routerLink]="['products/sale']" class="dropdown-item"
-              >On sale</a
-            >
           </div>
         </li>
         <li class="nav-item">
@@ -106,8 +102,8 @@
             >SIGN IN<i class="fa fa-user ml-2"></i
           ></a>
         </li>
-        <ng-container *ngIf="!user">
-          <li class="nav-item dropdown" *ngIf="_authService.loggedIn()">
+        <ng-container *ngIf="!user && _authService.loggedIn()">
+          <li class="nav-item dropdown">
             <a
               class="nav-link navbar-item dropdown nav-item"
               role="button"
@@ -138,13 +134,13 @@
             </div>
           </li>
         </ng-container>
-        <ng-container *ngIf="user">
+        <ng-container *ngIf="user && _authService.loggedIn()">
           <li class="nav-item">
             <a
               [routerLink]="['/cartify']"
               class="nav-link navbar-item"
               (click)="socialLogout()"
-              >GOOGLE/FACEBOOK LOGOUT</a
+              >LOGOUT</a
             >
           </li>
         </ng-container>
@@ -154,13 +150,10 @@
           ></a>
         </li>
         <li class="nav-item">
-          <a
-            *ngIf="cart && _authService.loggedIn()"
-            [routerLink]="['cartify/cart']"
-            class="nav-link navbar-item"
+          <a [routerLink]="['cartify/cart']" class="nav-link navbar-item"
             >CART<i class="fas fa-shopping-cart ml-2">
               <span class="badge badge-pill badge-info">{{
-                cart.totalQty
+                cart?.totalQty
               }}</span></i
             >
           </a>
