--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -99,8 +99,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col" *ngFor="let error of errors">
-          <p class="text-center text-danger">* {{ error }} *</p>
+        <div class="col" *ngFor="let error of error">
+          <p class="text-center text-danger pt-3">* {{ error }} *</p>
         </div>
       </div>
     </form>
@@ -110,8 +110,8 @@
 <div class="row m-5">
   <div class="col">
     <p class="text-center">
-      How are we doing? <span><a href="/feedback">Give us feedback</a></span> on
-      this page.
+      How are we doing?
+      <span><p class="feedback-text">Give us some feedback</p></span>
     </p>
   </div>
 </div>
