--- a/src/app/components/custom-form/custom-form.component.scss
+++ b/src/app/components/custom-form/custom-form.component.scss
@@ -7,11 +7,35 @@
 // font-family: 'Roboto Condensed', sans-serif;
 // font-family: 'Roboto Slab', serif;
 
-// font-family: 'Archivo Black', sans-serif;
-// font-family: 'Domine', serif;
-// font-family: 'Roboto', sans-serif;
-// font-family: 'Roboto Condensed', sans-serif;
-// font-family: 'Roboto Slab', serif;
+// Extra small devices (portrait phones, less than 576px)
+// @media (max-width: 575.98px) {
+//   ...
+// }
+
+// // Small devices (landscape phones, less than 768px)
+// @media (max-width: 767.98px) {
+//   ...
+// }
+
+// // Medium devices (tablets, less than 992px)
+// @media (max-width: 991.98px) {
+//   ...
+// }
+
+// // Large devices (desktops, less than 1200px)
+// @media (max-width: 1199.98px) {
+//   ...
+// }
+
+// Extra large devices (large desktops)
+// No media query since the extra-large breakpoint has no upper bound on its width
+
+
+// .col-sm for larger mobile phones (devices with resolutions ≥ 576px);
+// .col-md for tablets (≥768px);
+// .col-lg for laptops (≥992px);
+// .col-xl for desktops (≥1200px)
+
 $font-h2: "Archivo Black",
 sans-serif;
 
