fixed media query on landscape-phone container

--- a/src/app/components/User_Component/order-details/order-details.component.css
+++ b/src/app/components/User_Component/order-details/order-details.component.css
@@ -57,12 +57,12 @@ p {
   }
 }
 
-#smartphone-width {
+#landscape-phone {
   display: none;
 }
 
 @media (max-width: 991.98px) {
-  #smartphone-width {
+  #landscape-phone {
     display: block;
   }
 }
