displaying more info about product

--- a/src/app/components/Product_Component/details/details.component.html
+++ b/src/app/components/Product_Component/details/details.component.html
@@ -9,7 +9,8 @@
   </div>
   <div class="col-md-6 my-auto">
     <h1>{{ oneProduct.name }}</h1>
-    <h2 class="text-info">{{ oneProduct.description }}</h2>
+    <h5>{{ oneProduct.brand }}</h5>
+    <h2 class="text-info">Description: {{ oneProduct.description }}</h2>
     <h4 class="text-info">${{ oneProduct.price }}</h4>
     <div class="col-sm mt-4 add-order-row">
       <button
